<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">
        <!-- Nombre de la Habitación -->
        <TextView
            android:id="@+id/tvNombreHabitacion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nombre_habitacion"
            android:textAppearance="?attr/textAppearanceListItem" />

        <!-- Capacidad de la Habitación -->
        <TextView
            android:id="@+id/tvCapacidadHabitacion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/capacidad_habitacion"
            android:textAppearance="?attr/textAppearanceListItem" />

        <!-- Precio por Noche -->
        <TextView
            android:id="@+id/tvPrecioHabitacion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/precio_noche"
            android:textAppearance="?attr/textAppearanceListItem" />

        <!-- Disponibilidad -->
        <TextView
            android:id="@+id/tvDisponibilidadHabitacion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/disponibilidad"
            android:textAppearance="?attr/textAppearanceListItem" />

        <!-- Puedes añadir más TextViews para otros detalles que consideres necesarios -->

    </LinearLayout>
</ScrollView>
